# disease-outbreak-prediction

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/: BADGES.md  WORKFLOWS.yml
.github/workflows/: advanced-analysis.yml.disabled  ci-simple.yml  ci.yml.disabled  dependency-updates.yml  deployment.yml.disabled  documentation.yml  model-monitoring.yml  release.yml  summary.yml
data/processed/: merged_data.csv
data/raw/: cdc_flu_data.csv
models/: lstm_model.h5  lstm_model.keras  rf_model.pkl
scripts/: dashboard.bat  dashboard.ps1  dashboard.sh  evaluate_models.py  generate_report.py  retrain_models.py  train.bat  train.ps1  train.sh
src/dashboard/: app.py
src/disease_outbreak_prediction/: __init__.py  data_acquisition.py  main.py  preprocessing.py  train.py
src/disease_outbreak_prediction/dashboard/: __init__.py  app.py
src/disease_outbreak_prediction/models/: __init__.py  lstm_model.py  spatial_analysis.py
src/models/: lstm_model.py  spatial_analysis.py
tests/: __init__.py  test_data_acquisition.py  test_main.py
